compatibility changes for bitbucket server 4.*

--- a/src/main/resources/satis-build-plugin.properties
+++ b/src/main/resources/satis-build-plugin.properties
@@ -2,4 +2,4 @@
 my.plugin.name=Satis Build Plugin
 satis-build-hook.name=Satis Build Trigger
 satis-build-hook.description=Triggers rebuild for current repository in Satis
-sk.satis-stash.satis-config.link = Satis Build Configuration
+satis-build-hook.config.link = Satis Build Configuration
